Info pyjamas/django communication fixed on Firefox

--- a/trunk/pear/pjstuff/public/Basic.css
+++ b/trunk/pear/pjstuff/public/Basic.css
@@ -7,11 +7,6 @@
   padding: 3px;
 }
 
-.gwt-PopupPanel .popupContent {
-  /* the wrapper around the content */
-  background: #000000;
-  font-family: Tahoma;
-}
 
 
 .gwt-button {
